# NewOPILessons

./: .gitignore  CMakeLists.txt  README.md  lib.cpp  lib.hpp  main.cpp  main_logic.cpp  test_logic.cpp
.github/workflows/: cmake-single-platform.yml
common/: lib.cpp
common/include/: lib.hpp
game/: CMakeLists.txt  main.cpp  utils.cpp  utils.hpp
game/test/: CMakeLists.txt  config_firstInvalidLine.txt  config_ok.txt  config_secondLine.txt  gtest_utils.cpp  test_utils.cpp
